--- a/src/systems/eu/implementations/vanilla/packages/eu-component-form-radio/eu-component-form-radio.scss
+++ b/src/systems/eu/implementations/vanilla/packages/eu-component-form-radio/eu-component-form-radio.scss
@@ -25,7 +25,7 @@
 ) {
   .ecl-radio {
     box-sizing: border-box;
-    margin-top: $ecl-spacing-m;
+    margin: 0;
   }
 
   .ecl-radio__input {
